Fixing routes and register.html

--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <!-- endbuild --> 
+    <link rel="shortcut icon" href="favicon.ico"> 
     <link href="styles/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="styles/animacion.css">
   </head>
@@ -30,7 +31,7 @@
 
       <header class="main-header">
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="#/" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>CA-W</b></span>
           <!-- logo for regular state and mobile devices -->
@@ -138,8 +139,8 @@
                   <li class="user-header">
                     <img src="img/user.png" class="img-circle" alt="User Image" />
                     <p>
-                      {{user}} - Web Developer
-                      <small>Member since Nov. 2012</small>
+                      {{user}}
+                      <small>Desarrollador Web</small>
                     </p>
                   </li>
                   <!-- Menu Body -->
@@ -187,7 +188,7 @@
             </div>
             <div class="pull-left info">
               <p>{{user}}</p>
-              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+              <i class="fa fa-circle text-success"></i> Online
             </div>
           </div>
           <!-- search form -->
