--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="styles/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <link href="plugins/iCheck/square/blue.css" rel="stylesheet" type="text/css" />
     <!-- endbuild -->    
+    <link rel="shortcut icon" href="favicon.ico"> 
     <link rel="stylesheet" href="styles/animacion.css">        
   </head>
   <body class="login-page" ng-app="facturacionLoginApp">
