--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
       <!-- build:js({.tmp,app}) scripts/scripts.js -->
       <script src="scripts/login/appLogin.js"></script>
+      <script src="scripts/firebase/configFirebase.js"></script>
+      <script src="scripts/firebase/services.js"></script>
+      <script src="scripts/firebase/service.firebase.js"></script>
       <script src="scripts/login/controllers/login.js"></script>
       <script src="scripts/login/services/login.js"></script>      
       <!-- endbuild -->
