--- a/admin.html
+++ b/admin.html
@@ -98,7 +98,7 @@
             </div>
             <div class="pull-left info">
               <p>{{user}}</p>
-              <i class="fa fa-circle text-success"></i> En linea
+              <i class="fa fa-circle text-success"></i> en línea
             </div>
           </div>
           <!-- search form -->
@@ -139,7 +139,7 @@
               </a>
               <ul class="treeview-menu">
                 <li><a href="#/registroCompras"><i class="fa fa-dot-circle-o"></i> Registro de Compra</a></li>
-                <li><a href="#/proveedores"><i class="fa fa-dot-circle-o"></i> Proveedores</a></li>
+                <li><a href="#/proveedoresCRD"><i class="fa fa-dot-circle-o"></i> Proveedores</a></li>
               </ul>
             </li>
             <li class="treeview">
@@ -436,6 +436,10 @@
       <script src="scripts/admin/services/ventasCRD.js"></script>      
       <script src="scripts/admin/controllers/ventasU.js"></script>
       <script src="scripts/admin/services/ventasU.js"></script>      
+      <script src="scripts/admin/controllers/proveedoresCRD.js"></script>
+      <script src="scripts/admin/services/proveedoresCRD.js"></script>      
+      <script src="scripts/admin/controllers/proveedoresU.js"></script>
+      <script src="scripts/admin/services/proveedoresU.js"></script>      
       <!-- endbuild -->
 
     <!-- jQuery 2.1.4 -->
