--- a/admin.html
+++ b/admin.html
@@ -438,8 +438,10 @@
     <!-- jQuery 2.1.4 -->
     <script src="plugins/jQuery/jQuery-2.1.4.min.js" type="text/javascript"></script>    
     <!-- jsPDF -->
-    <script src="plugins/jsPDF/jspdf.js" type="text/javascript"></script>    
-    <script src="plugins/jsPDF/pdfFromHTML.js" type="text/javascript"></script>    
+    <script src="plugins/jsPDF/jspdf.min.js"></script>
+    <script src="plugins/jsPDF/jspdf.js"></script>
+    <script src="plugins/jsPDF/jspdf.plugin.split_text_to_size.js"></script>
+    <script src="plugins/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script>  
     <!-- DATA TABES SCRIPT -->
     <script src="plugins/datatables/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="plugins/datatables/dataTables.bootstrap.min.js" type="text/javascript"></script>
