Ajustes y actualizaciones para reportes y registo de ventas

--- a/admin.html
+++ b/admin.html
@@ -433,6 +433,10 @@
       <script src="scripts/admin/services/listadoProductosCRD.js"></script>      
       <script src="scripts/admin/controllers/listadoProductosU.js"></script>
       <script src="scripts/admin/services/listadoProductosU.js"></script>      
+      <script src="scripts/admin/controllers/reportesVentas.js"></script>
+      <script src="scripts/admin/services/reportesVentas.js"></script>      
+      <script src="scripts/admin/controllers/reportesVentasProducto.js"></script>
+      <script src="scripts/admin/services/reportesVentasProducto.js"></script>   
       <!-- endbuild -->
 
     <!-- jQuery 2.1.4 -->
